<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search_menu"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/menu_language"
        android:title="@string/menu_language"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/notification_setting"
        android:title="@string/notification_settings"
        android:icon="@drawable/ic_notifications_white_24dp"
        app:showAsAction="always"/>


</menu>