<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">
    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.alif.submission.mdb.ui.movie.fragment.MovieFragment"
        android:label="@string/fragment_movie_nav"
        tools:layout="@layout/fragment_movie" />
    <fragment
        android:id="@+id/navigation_show"
        android:name="com.alif.submission.mdb.ui.show.fragment.ShowFragment"
        android:label="@string/fragment_show_nav"
        tools:layout="@layout/fragment_show" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.alif.submission.mdb.ui.favorite.fragment.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>
